--- a/README
+++ b/README
@@ -2,9 +2,9 @@
 *** repeat it for each group member;
 *** list group members alphabetically by last name
 
-Name(last): xxxx
-Name(first): xxxx
-Login_ID: xxxxx
+Name(last): Ferrucci
+Name(first): Joe
+Login_ID: ferrucci
 
 *** Give the status of your work; here's a sample.
 
@@ -14,8 +14,10 @@ part1: Works on all tests.
 part2: Works on all tests.
 part3: Works on all tests.
 part4: Works on all tests.
-part5: Works on only the first test case.
+part5: Works on all tests.
 part6: Didn't attempt.
-part7: Didn't attempt.
+part7: No such thing. Didn't attempt.
 
 Overall: Any comment/discussion related to this HW.
+
+Not OK to share my code with anybody.
