--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 Name(last): Ferrucci
 Name(first): Joe
-Login_ID: ferrucci
+Login_ID: ________
 
 *** Give the status of your work; here's a sample.
 
